<resources>
    <string name="app_name">Java_Workplanner</string>
    <string name="button">Button</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="todo">TODO</string>
    <string name="add">ADD</string>
    <string name="notifications">Notifications</string>
    <string name="deadline">Deadline</string>
    <string name="amount_of_work">Amount of work</string>
    <string name="date">date</string>
    <string name="textview">TextView</string>
    <string name="hour_s">Hour (s)</string>
    <string name="_1_5">1.5</string>
</resources>
